[gd_scene load_steps=13 format=3 uid="uid://23x56kh4p5xh"]

[ext_resource type="Texture2D" uid="uid://k461u2fslsp5" path="res://art/maman/maman.png" id="1_ioskq"]
[ext_resource type="Script" uid="uid://csta3lrxk4ahi" path="res://scenes/intro.gd" id="1_yjqpq"]
[ext_resource type="Texture2D" uid="uid://b2g5bfulwmxo6" path="res://art/mouton/sheep_walk.png" id="3_4bx60"]
[ext_resource type="Texture2D" uid="uid://bhpwb626coksn" path="res://art/bubble/bubble.png" id="4_i2l1n"]
[ext_resource type="FontFile" uid="uid://dche5uxxdw2a3" path="res://fonts/Xolonium-Regular.ttf" id="5_wfs7u"]
[ext_resource type="AudioStream" uid="uid://rdofo5fq7woi" path="res://sound/effect/child_talk_1.mp3" id="6_bu1yb"]
[ext_resource type="AudioStream" uid="uid://beh8rb7qklcxg" path="res://sound/effect/child_talk_2.mp3" id="7_t1qkj"]
[ext_resource type="AudioStream" uid="uid://r7s3pt620fde" path="res://sound/effect/child_talk_3.mp3" id="8_272cy"]

[sub_resource type="Animation" id="Animation_i2l1n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Children/ChildBubble/ChildBubbleText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Children/ChildBubble:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mother:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(833.99994, 460.99997)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Children/ChildBubble/ChildBubbleText:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bu1yb"]
streams_count = 3
stream_0/stream = ExtResource("6_bu1yb")
stream_1/stream = ExtResource("7_t1qkj")
stream_2/stream = ExtResource("8_272cy")

[sub_resource type="Animation" id="Animation_ioskq"]
resource_name = "intro"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Children/ChildBubble/ChildBubbleText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3.7666667, 5.0000005),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["", "...", "", "Mom ? I can't sleep..."]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Children/ChildBubble:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3.7666667, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mother:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(6.1666665, 8.233334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1250, 461), Vector2(700, 461)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Children/ChildBubble/ChildBubbleText:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 2.4666667, 3.8, 3.8666666, 5.02, 5.37, 8.4, 9.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0, 0.0, 0.2386363, 0.2386363, 1.0]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Children/ChildAudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 5.4201,
"start_offset": 0.0,
"stream": SubResource("AudioStreamRandomizer_bu1yb")
}],
"times": PackedFloat32Array(1.1906028)
}
tracks/4/use_blend = false

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjqpq"]
_data = {
&"RESET": SubResource("Animation_i2l1n"),
&"intro": SubResource("Animation_ioskq")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjqpq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yjqpq")
}
autoplay = "intro"

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Mother" type="Sprite2D" parent="."]
position = Vector2(833.99994, 460.99997)
scale = Vector2(0.18, 0.18)
texture = ExtResource("1_ioskq")

[node name="MotherBubble" type="Sprite2D" parent="Mother"]
visible = false
position = Vector2(-605.55493, -483.3335)
scale = Vector2(1.5150282, 1.1691626)
texture = ExtResource("4_i2l1n")
flip_h = true

[node name="MotherBubbleText" type="Label" parent="Mother/MotherBubble"]
offset_right = 40.0
offset_bottom = 23.0
visible_characters = 0
visible_ratio = 0.0

[node name="MotherAudioStreamPlayer" type="AudioStreamPlayer" parent="Mother"]

[node name="Children" type="Sprite2D" parent="."]
position = Vector2(351, 461.99997)
scale = Vector2(0.7814815, 0.8240741)
texture = ExtResource("3_4bx60")

[node name="ChildBubble" type="Sprite2D" parent="Children"]
visible = false
position = Vector2(58.86252, -98.29208)
scale = Vector2(0.2457084, 0.20590109)
texture = ExtResource("4_i2l1n")

[node name="ChildBubbleText" type="Label" parent="Children/ChildBubble"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -479.12512
offset_top = -347.71802
offset_right = -622.9929
offset_bottom = -965.0648
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_wfs7u")
theme_override_font_sizes/font_size = 128
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="ChildAudioStreamPlayer" type="AudioStreamPlayer" parent="Children"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
